fixed all the integration issues between karma and requirejs.

--- a/Demo-LendingTracker.Tests/Demo-LendingTracker.Tests.csproj
+++ b/Demo-LendingTracker.Tests/Demo-LendingTracker.Tests.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="media-viewmodel-tests.js" />
+    <Content Include="title-viewmodel-tests.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
