Added tests for media-list-viewmodel

--- a/Demo-LendingTracker.Tests/Demo-LendingTracker.Tests.csproj
+++ b/Demo-LendingTracker.Tests/Demo-LendingTracker.Tests.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="fake-localStorage.js" />
+    <Content Include="media-list-viewmodel-tests.js" />
     <Content Include="title-viewmodel-tests.js" />
   </ItemGroup>
   <PropertyGroup>
