--- a/Demo-LendingTracker/Demo-LendingTracker.csproj
+++ b/Demo-LendingTracker/Demo-LendingTracker.csproj
@@ -225,6 +225,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\app\media-list-viewmodel.js" />
     <Content Include="Scripts\app\title-viewmodel.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
